@@ -1,5 +1,6 @@
 ﻿- New feature: combined prop/tree mode - replace props (in buildings or networks) with trees, or vice-versa
 - BOB tool now recognises the underground (PageDown/PageUp to switch)
+- Effect renders now updated on prop/tree change (lights can now be added/removed in-game)
 
 
 Version 0.9.0.4 -
